--- a/termsofservice.css
+++ b/termsofservice.css
@@ -824,7 +824,7 @@
 /*Footer CSS */
 
 .footer__container {
-    background-color: #141414;
+    background-color: #131313;
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
